fix : pointerEvent, solutionData 수정